# frereit.github.io.staging

./: .gitmodules  CNAME  blog.css  hugo.toml  index.html  pre-push
.github/workflows/: hugo.yaml
content/: _index.md  bookmarks.md
content/blog/: aes_gcm.md  bootstring_decoding.md  bootstring_encoding.md
content/posts/: bootstring.md  bootstring_decoding.md  bootstring_encoding.md
layouts/partials/: custom_body.html  custom_head.html
posts/: bootstring.html  bootstring_decoding.html  bootstring_encoding.html
posts/js/: bootstring.js
static/css/: custom.css
static/js/: aesgcm.js  aesgcm_widgets.js  bootstring.js  input_sync.js
wasm/cantor-zassenhaus/: Cargo.toml  cz.js  index.html
wasm/cantor-zassenhaus/src/: f128.rs  factorize.rs  lib.rs
