[package]
name = "polyfactor"
version = "0.1.0"
authors = ["FrederiK Reiter <hi@frereit.de>" ]
description = "Providing a AES-GCM and Cantor-Zassenhaus demo for WebAssembly"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
thiserror = "1.0.58"
auto_ops = "0.3.0"
